--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 # Compiled class files
 *.class
+target/
+
+# Package files
 *.jar
 *.war
 *.ear
 *.nar
-target/
+*.zip
+*.tar.gz
+*.rar
 
 # Log files
 *.log
@@ -15,15 +20,6 @@ logs/
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
-
-# Package Files
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
 
 # Virtual machine crash logs
 hs_err_pid*
@@ -79,10 +75,12 @@ build/
 .env
 .env.local
 .env.*.local
+
+# Personal Spring Boot overrides (NEVER commit)
 application-local.yml
 application-local.properties
-application-dev.yml
-application-dev.properties
+application-local-*.yml
+application-local-*.properties
 
 # Spring Boot
 spring-boot-devtools.properties
@@ -94,7 +92,6 @@ coverage/
 
 # Temporary files
 *.tmp
-*.bak
 *.swp
 *.swo
 *~
