feat: add Docker Compose infrastructure and migrate to YAML configuration
- Add docker-compose.yml with PostgreSQL, Redis, and RabbitMQ services
- Configure health checks and persistent volumes for all services
- Migrate application.properties to application.yml with comprehensive configuration
- Add Flyway dependencies for database migration management
- Create initial Flyway migration placeholder (V1__init.sql)
- Configure Spring Data JPA, Redis, and RabbitMQ connections
- Add management endpoints for monitoring (health, metrics, prometheus)
- Update project description in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <artifactId>pulseforge</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>pulseforge</name>
-  <description>pulseforge</description>
+  <description>Multi-tenant event ingestion and analytics platform</description>
   <url/>
   <licenses>
     <license/>
@@ -58,6 +58,14 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-webmvc</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-database-postgresql</artifactId>
     </dependency>
 
     <dependency>
