--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
         java-version: '25'
         distribution: 'temurin'
         cache: 'maven'
-    
+
+    - name: Set execute permission for mvnw
+      run: chmod +x ./mvnw
+
     - name: Build and test
       run: ./mvnw clean package
