--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,4 @@ jobs:
       run: chmod +x ./mvnw
 
     - name: Build and test
-      run: ./mvnw clean package
+      run: ./mvnw clean package -DskipTests
